# ResilenceScanReportBundled

./: CLAUDE.md  README.md  REVIEW.md  REVIEW3.md  REVIEW5.md  SCROLReport.qmd  clean_data.py  convert_data.py  email_tracker.py  generate_all_reports.py  gui_system_check.py  pyproject.toml  requirements.txt  send_email.py  update_checker.py  validate_all_features.py  validate_data_integrity.py  validate_reports.py
.claude/agents/: data-validator.md  email-status.md  report-status.md  system-health.md  test-runner.md
.github/workflows/: ci.yml  pages.yml  platform.yml
app/: app_paths.py  gui_data.py  gui_email.py  gui_email_send.py  gui_email_template.py  gui_generate.py  gui_logs.py  gui_settings.py  main.py
docs/: index.html
packaging/: setup_macos.sh
tests/: test_app_paths.py  test_bin_paths.py  test_convert_edge_cases.py  test_convert_formats.py  test_csv_validation.py  test_email_send.py  test_email_tracker_extended.py  test_frozen_paths.py  test_installer_sanity.py  test_logging_behavior.py  test_macos_installer.py  test_macos_paths.py  test_malformed_input.py  test_r_package_repair.py  test_shared_utils.py  test_thread_safety.py
tests/fixtures/: sample_survey.json  sample_survey.jsonl  sample_survey.xls  sample_survey_nested.json
utils/: bin_paths.py  constants.py  filename_utils.py  path_utils.py
