[project]
name = "ResilenceScanReportBuilder"
version = "0.21.61"
description = "Desktop app for generating personalised ResilienceScan PDF reports using Quarto, R, and TinyTeX"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — not enforced in this codebase
    "I001",   # import sort order — cosmetic
    "UP015",  # unnecessary open() mode arg — cosmetic
    "UP031",  # %-format — cosmetic
    "B905",   # zip() without strict= — too pedantic for existing code
    "SIM",    # all simplify rules — cosmetic
]

[tool.ruff.lint.per-file-ignores]
# Legacy pipeline scripts — suppress non-critical pre-existing issues
"clean_data.py"             = ["E722", "F841", "B007"]
"clean_data_enhanced.py"    = ["E722", "F841", "B007"]
"generate_all_reports.py"   = ["E722", "F841", "B007"]
"validate_all_features.py"  = ["E701", "E722", "F841", "B007"]
"validate_data_integrity.py"= ["E701", "E722", "F841", "B007"]
"validate_reports.py"       = ["E722", "F841", "B007"]
"validate_reports_detailed.py" = ["E722", "F841", "B007"]
"validate_single_report.py" = ["E722", "F841", "B007"]
"send_email.py"             = ["E722", "F841", "B007"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
